	PR debug/65779 	* shrink-wrap.c: Include valtrack.h. 	(move_insn_for_shrink_wrap): Add DEBUG argument.  If 	MAY_HAVE_DEBUG_INSNS, call dead_debug_add on DEBUG_INSNs 	in between insn and where it will be moved to.  Call 	dead_debug_insert_temp. 	(prepare_shrink_wrap): Adjust caller.  Call dead_debug_local_init 	first and dead_debug_local_finish at the end. 	For uses and defs bitmap, handle all regs in between REGNO and 	END_REGNO, not just the first one.

* gcc.dg/pr65779.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@232558 138bc75d-0d04-0410-961f-82ee72b054a4